--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5,7 +5,7 @@ body {
 h1, h2 {
   text-align: center;
   font-family: 'Lobster', cursive;
-  font-size: x-large;
+  font-size: xxx-large;
     -webkit-text-fill-color: red;
     -webkit-text-stroke-width: .05px;
     -webkit-text-stroke-color: yellow;
@@ -16,7 +16,7 @@ h1 {
 }
 
 h2 {
-  font-size: large;
+  font-size: x-large;
 }
 
 .float-container {
@@ -30,23 +30,49 @@ h2 {
   padding: 20px;
 }
 
+/* .hidden {
+  display: none;
+} */
+
 #faves {
   flex-grow: 1;
 }
 
 .new {
-  width: 100%;
+  /* width: 100%; */
+  margin-left: auto;
+  margin-right: auto;
+  width: 8em
 }
 
 li {
   padding: 5px;
   margin: 5px;
-  background: #faebd7;
+  background: #643a2d;
+  color: yellow;
+  /* border-top-left-radius: 25%;
+  border-top-right-radius: 25%; */
+  border-radius: 15%;
   list-style-type: none;
   text-align: center;
   /* padding: 0; Remove padding */
   /* margin: 0; Remove margins */
     margin-right: 40px;
+}
+
+button {
+  background: #643a2d;
+  color: yellow;
+  font-family: 'Lobster', cursive;
+}
+
+.change-eat {
+  background: red ;
+  color: yellow;
+}
+
+.rate {
+  border: none;
 }
 
 .label {
