--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
-<h1>Eat-Da-Burger</h1>
-<h1>🍔</h1>
+<h1>Eat-Da-Burger<br>Bucket List Burgers</h1>
+{{!-- <h1>🍔</h1> --}}
 
 
 <div class="float-container">
@@ -12,6 +12,24 @@
       {{> burgers/burger-block eaten=true}}
       {{/unless}}
       {{/each}}
+      <h2>New Burger</h2>
+<form class="create-form">
+
+  <div class="form-group">
+    <label for="ca">Burger:</label>
+    <input type="text" id="ca" name="name">
+  </div>
+
+  {{!-- <div class="form-group hidden">
+    <label for="eaten">eaten?</label><br>
+    <input type="radio" name="eaten" value="1" > eaten!<br>
+    <input type="radio" name="eaten" value="0" checked> Awake
+  </div> --}}
+
+  <button type="submit">Add burger</button>
+
+
+</form>
     </ul>
   </div>
 
@@ -31,21 +49,5 @@
 
 
 <div class="new section">
-<h2>New Burger</h2>
-<form class="create-form">
 
-  <div class="form-group">
-    <label for="ca">Burger:</label>
-    <input type="text" id="ca" name="name">
   </div>
-
-  <div class="form-group">
-    <label for="eaten">eaten?</label><br>
-    <input type="radio" name="eaten" value="1" checked> eaten!<br>
-    <input type="radio" name="eaten" value="0"> Awake
-  </div>
-
-  <button type="submit">Add burger</button>
-  </div>
-
-</form>
