--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,21 +19,11 @@
     <label for="ca">Burger:</label>
     <input type="text" id="ca" name="name">
   </div>
-
-  {{!-- <div class="form-group hidden">
-    <label for="eaten">eaten?</label><br>
-    <input type="radio" name="eaten" value="1" > eaten!<br>
-    <input type="radio" name="eaten" value="0" checked> Awake
-  </div> --}}
-
-  <button type="submit">Add burger</button>
-
+  <button class="new" type="submit">Add burger</button>
 
 </form>
     </ul>
   </div>
-
-
   <div id="faves" class="section">
     <h2>My Favourite Burgers</h2>
     <ul>
@@ -44,10 +34,4 @@
       {{/each}}
     </ul>
   </div>
-
 </div>
-
-
-<div class="new section">
-
-  </div>
