--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,12 +14,13 @@
       {{/each}}
       <h2>New Burger</h2>
 <form class="create-form">
-
   <div class="form-group">
     <label for="ca">Burger:</label>
     <input type="text" id="ca" name="name">
   </div>
+  <div class="newbtn">
   <button class="new" type="submit">Add burger</button>
+  </div>
 
 </form>
     </ul>
