--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,13 +2,12 @@
 	{{name}}<br>
 {{#if eaten}}
 	<button class="change-eat" data-id="{{id}}" data-eat="{{eaten}}">
-		{{!-- {{#if eaten}}Eat me!{{else}}{{/if}} --}}Eat me!
+	Eat me!
 	</button>
 {{/if}}
 
 
 {{#unless eaten}}
-	{{!-- {{#if 5}}❤️{{else}}~~~{{/if}} --}}
 	<button class="rate" data-id="{{id}}" data-rate="5">❤️</button>
 	<button class="rate" data-id="{{id}}" data-rate="4">⭐</button>
 	<button class="rate" data-id="{{id}}" data-rate="3">👍</button>
@@ -16,9 +15,5 @@
 	<button class="rate" data-id="{{id}}" data-rate="1">🤮</button>
 {{/unless}}
 
-  {{!-- <input type="number" id="rate" name="rate" min="1" max="5">
-  <input type="submit" value="rate"> --}}
 
-
-	{{!-- <button class="delete-burger" data-id="{{this.id}}">DELETE!</button> --}}
 </li>
